# Growth_mindset_project

./: README.md  README.py  main.py  pyproject.toml
pages/: README_Generator.py
streamlit/: config.toml
