[project]
name = "growth-mindset-app"
version = "0.1.0"
description = "An app to cultivate a growth mindset with interactive tools and resources."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chainlit>=2.4.400",
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.1.0",
    "streamlit>=1.50.0",
    "streamlit-lottie>=0.1.17",
]
